# oakd-ros-simple

./: CMakeLists.txt  package.xml
include/: main.h
launch/: main.launch
src/: main_ros.cpp
